--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,10 @@ jobs:
       - run: pnpm build
       - run: pnpm test:ci
 
+      # OIDC Trusted Publishing requires npm 11.5.1+
+      - name: Upgrade npm for OIDC
+        run: npm install -g npm@latest
+
       - name: Release
         id: release
         env:
