fix: add git+ prefix to repository URLs in package.json
Fixes npm publish warning about auto-correcting repository.url fields.

--- a/packages/hzl-web/package.json
+++ b/packages/hzl-web/package.json
@@ -28,7 +28,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tmchow/hzl.git",
+    "url": "git+https://github.com/tmchow/hzl.git",
     "directory": "packages/hzl-web"
   },
   "homepage": "https://www.hzl-tasks.com",
