--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tmchow/hzl.git"
+    "url": "git+https://github.com/tmchow/hzl.git"
   },
   "license": "MIT",
   "bugs": {
