--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -46,7 +46,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tmchow/hzl.git",
+    "url": "git+https://github.com/tmchow/hzl.git",
     "directory": "packages/hzl-cli"
   },
   "homepage": "https://www.hzl-tasks.com",
