--- a/packages/hzl-core/package.json
+++ b/packages/hzl-core/package.json
@@ -22,7 +22,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tmchow/hzl.git",
+    "url": "git+https://github.com/tmchow/hzl.git",
     "directory": "packages/hzl-core"
   },
   "homepage": "https://www.hzl-tasks.com",
