fix: use @anolilab/semantic-release-pnpm for native workspace:* support
Instead of manually replacing workspace:* deps in sync-versions.js,
use @anolilab/semantic-release-pnpm which wraps pnpm publish. pnpm
natively handles workspace:* replacement at publish time without
modifying source files.

This preserves the monorepo workflow while ensuring published packages
have resolved version numbers.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,15 +16,15 @@
     ["@semantic-release/changelog", {
       "changelogFile": "CHANGELOG.md"
     }],
-    ["@semantic-release/npm", {
+    ["@anolilab/semantic-release-pnpm", {
       "pkgRoot": "packages/hzl-core",
       "provenance": true
     }],
-    ["@semantic-release/npm", {
+    ["@anolilab/semantic-release-pnpm", {
       "pkgRoot": "packages/hzl-web",
       "provenance": true
     }],
-    ["@semantic-release/npm", {
+    ["@anolilab/semantic-release-pnpm", {
       "pkgRoot": "packages/hzl-cli",
       "provenance": true
     }],
