--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prepare": "husky && pnpm run build"
   },
   "devDependencies": {
+    "@anolilab/semantic-release-pnpm": "^5.0.0",
     "@commitlint/cli": "^19.0.0",
     "@commitlint/config-conventional": "^19.0.0",
     "@semantic-release/changelog": "^6.0.0",
