fix: specify pnpm lock file path in setup-node cache config
Add explicit cache-dependency-path: 'pnpm-lock.yaml' to setup-node@v6
steps in ci.yml, commitlint.yml, and release.yml to fix cache detection.
Also remove unused npm cache from readme-sync.yml since that workflow
doesn't install dependencies.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,7 @@ jobs:
           node-version: '22.14.0'
           # No registry-url: it sets NODE_AUTH_TOKEN which prevents OIDC fallback
           cache: 'pnpm'
+          cache-dependency-path: 'pnpm-lock.yaml'
 
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
