refactor(docs): reorganize documentation structure
Separate external site from internal docs:
- Move site content to docs-site/ (concepts, scenarios, setup)
- Keep internal docs in docs/ (plans, brainstorms, solutions)
- Move snippets to root-level /snippets/ with UPPERCASE names

Update sync-snippets.js to use new paths and scan docs-site/.
Simplify _config.yml by removing excludes (no longer needed).

This clarifies the purpose of each folder:
- docs-site/ = public documentation site
- docs/ = internal development documentation
- snippets/ = source files for CLI and sync

--- a/docs-site/_config.yml
+++ b/docs-site/_config.yml
@@ -2,13 +2,8 @@ title: HZL Documentation
 description: External task ledger for coding agents
 remote_theme: just-the-docs/just-the-docs
 
-# Exclude internal development docs from the site
+# Exclude system files
 exclude:
-  - plans/
-  - brainstorms/
-  - snippets/
-  - solutions/
-  - openclaw/
   - .DS_Store
 
 # Navigation
