feat(cli): add `hzl guide` command for workflow documentation
Add new command that outputs the full HZL workflow documentation:
- Creates guide.ts command that outputs AGENT-POLICY.md content
- Add generate-guide-content.js to build guide-content.ts from snippet
- Run prebuild script to keep guide in sync with AGENT-POLICY.md
- Add guide-content.ts to .gitignore (auto-generated)

Also add GitHub Actions workflow for docs-site deployment:
- deploy-docs.yml builds from docs-site/ folder
- Triggers on changes to docs-site/ or workflow file

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,6 @@ packages/*/.claude/
 
 # Conductor workspace context
 .context/
+
+# Auto-generated files
+packages/hzl-cli/src/commands/guide-content.ts
