fix(cli): run guide content generation before tests
Adds pretest hook to ensure generated guide content is available
when running tests for the guide command.

--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -59,6 +59,7 @@
   "scripts": {
     "prebuild": "node ../../scripts/generate-guide-content.js",
     "build": "tsc -b",
+    "pretest": "node ../../scripts/generate-guide-content.js",
     "test": "vitest run",
     "test:watch": "vitest"
   },
