feat(cli): add `hzl guide` command for workflow documentation (#97)
## Summary

- Adds `hzl guide` command that outputs workflow documentation for
agents
- Creates new agent policy that's fewer tokens pushing it use `hzl
guide` to get better results in sessions without bloating AGENTS.md
directly
- Reorganizes documentation structure with snippet system for reusable
content
- Updates GitHub Actions to latest versions (checkout@v6,
upload-pages-artifact@v4)
- Adds pretest hook to ensure generated content is available for tests

--- a/packages/hzl-cli/package.json
+++ b/packages/hzl-cli/package.json
@@ -57,7 +57,9 @@
     "node": ">=22.14.0"
   },
   "scripts": {
+    "prebuild": "node ../../scripts/generate-guide-content.js",
     "build": "tsc -b",
+    "pretest": "node ../../scripts/generate-guide-content.js",
     "test": "vitest run",
     "test:watch": "vitest"
   },
