docs: restructure documentation site for better navigation
- Slim README from 679 to 143 lines, moving details to docs-site
- Create getting-started/ section (installation, quickstart, agent setup)
- Create workflows/ section (single-agent, multi-agent, handoffs, etc.)
- Create reference/ section (CLI reference, architecture)
- Add new concept pages: checkpoints, claiming-leases, cloud-sync
- Add troubleshooting page with common issues and fixes
- Update concepts/index with philosophy, installation model, constraints
- Update existing concept pages with cross-references to new pages
- Merge dependency-sequencing content into concepts/dependencies
- Delete old setup/ and scenarios/ directories (content migrated)
- Update nav config and home page for new structure

--- a/docs-site/_config.yml
+++ b/docs-site/_config.yml
@@ -18,7 +18,7 @@ search:
 # Footer links
 aux_links:
   "GitHub": "https://github.com/tmchow/hzl"
-  "CLI Reference": "https://github.com/tmchow/hzl#cli-reference"
+  "CLI Reference": "https://www.hzl-tasks.com/reference/cli"
 
 aux_links_new_tab: true
 
