feat: keep hzl skill in hzl repo, move others to tmc-marketplace
The hzl skill stays in this repo since it's tightly coupled to the
hzl CLI. Workflow skills (brainstorming, plan-review, code-review,
executing-work, etc.) and agents move to tmc-marketplace as the
iterative-engineering plugin.

- Restore .claude-plugin/ with hzl plugin
- Restore skills/hzl/SKILL.md
- Keep install scripts pointing to tmchow/hzl marketplace
- Restore CI marketplace version verification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Verify snippets in sync
         run: node scripts/sync-snippets.js --check
 
+      - name: Verify marketplace versions
+        run: pnpm verify:marketplace
+
   test:
     name: Test
     runs-on: self-hosted
