fix(ci): run release dry-run in release environment

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
   dry-run:
     if: ${{ inputs.mode == 'dry-run' }}
     runs-on: ubuntu-latest
+    environment: release
     steps:
       - uses: actions/checkout@v6
         with:
