feat(web): add React + Vite scaffold with build pipeline and API layer
Migrate hzl-web from monolithic index.html to a React + Vite + TypeScript
application while preserving the legacy dashboard behind a feature toggle.

- Add Vite build pipeline with React plugin, outputting to dist/ui/
- Create React app scaffold with placeholder dashboard (dark theme)
- Add typed API client, SSE client, and data-fetching hooks
- Rewrite ui-embed.ts to load all dist/ui/ files dynamically
- Update server.ts with generic static file handler and SPA fallback
- Support HZL_LEGACY_DASHBOARD=1 env var for legacy dashboard toggle
- Rename src/ui/index.html to src/ui/legacy.html
- Move static assets (favicons, manifest, SW) to public/ for Vite
- Update CSP headers for self-hosted assets (no more CDN allowances)
- Add aggressive caching for Vite hashed assets

--- a/packages/hzl-web/tsconfig.json
+++ b/packages/hzl-web/tsconfig.json
@@ -13,5 +13,6 @@
   "references": [
     { "path": "../hzl-core" }
   ],
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/app/**"]
 }
