--- a/packages/hzl-web/package.json
+++ b/packages/hzl-web/package.json
@@ -52,18 +52,25 @@
     "visualization"
   ],
   "scripts": {
-    "build": "tsc -b && cp -r src/ui dist/",
+    "build": "vite build && tsc -b && cp src/ui/legacy.html dist/ui/legacy.html",
+    "dev": "vite",
     "test": "vitest run",
     "test:ci": "vitest run --coverage",
     "test:watch": "vitest"
   },
   "dependencies": {
-    "hzl-core": "workspace:*"
+    "hzl-core": "workspace:*",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^25.2.1",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "libsql": "^0.5.0",
     "typescript": "^5.3.0",
+    "vite": "^6.3.5",
     "vitest": "^4.0.18"
   }
 }
