--- a/packages/hzl-web/package.json
+++ b/packages/hzl-web/package.json
@@ -59,11 +59,17 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "d3": "^7.9.0",
+    "dompurify": "^3.3.1",
+    "force-graph": "^1.51.1",
     "hzl-core": "workspace:*",
+    "marked": "^17.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^25.2.1",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
