feat(cli): add --lease to steal and claimed_at to stuck output
- Add --lease <minutes> flag to `task steal` for atomic
  steal-and-lease in a single operation
- Include lease_until in steal JSON result
- Add claimed_at to `task stuck` JSON output so orchestrators
  can reason about total task duration
- Update claiming-leases docs and CLI reference

--- a/docs/metadata/cli-manifest.json
+++ b/docs/metadata/cli-manifest.json
@@ -1711,6 +1711,16 @@
           "optional": false,
           "defaultValue": null,
           "description": "Only steal if lease has expired"
+        },
+        {
+          "flags": "-l, --lease <minutes>",
+          "short": "-l",
+          "long": "--lease",
+          "required": true,
+          "mandatory": false,
+          "optional": false,
+          "defaultValue": null,
+          "description": "Set new lease duration in minutes"
         }
       ],
       "hasSubcommands": false
